packages/engine/src/tests/snapshots/engine__tests__tooltip__broken_unknown_in_table_tooltips.snap
---
source: packages/engine/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      3,
      15
    ],
    "items": 2
  }
]
