packages/engine/src/tests/snapshots/engine__tests__tooltip__clean_equation_at_eof_tooltips.snap
---
source: packages/engine/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      42,
      49
    ],
    "items": 3
  }
]
