packages/engine/src/tests/snapshots/engine__tests__tooltip__clean_equation_only_tooltips.snap
---
source: packages/engine/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      0,
      13
    ],
    "items": 6
  }
]
