packages/engine/src/tests/snapshots/engine__tests__tooltip__clean_field_access_tooltips.snap
---
source: packages/engine/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      22,
      47
    ],
    "items": 4
  }
]
