packages/engine/src/tests/snapshots/engine__tests__tooltip__clean_links_tooltips.snap
---
source: packages/engine/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      181,
      184
    ],
    "items": 4
  }
]
