packages/engine/src/tests/snapshots/engine__tests__tooltip__clean_math_aligned_tooltips.snap
---
source: packages/engine/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      9,
      27
    ],
    "items": 8
  }
]
