packages/engine/src/tests/snapshots/engine__tests__tooltip__clean_math_in_context_tooltips.snap
---
source: packages/engine/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      16,
      19
    ],
    "items": 2
  },
  {
    "range": [
      24,
      29
    ],
    "items": 3
  },
  {
    "range": [
      34,
      43
    ],
    "items": 7
  },
  {
    "range": [
      61,
      72
    ],
    "items": 6
  },
  {
    "range": [
      91,
      98
    ],
    "items": 4
  },
  {
    "range": [
      111,
      126
    ],
    "items": 7
  },
  {
    "range": [
      130,
      137
    ],
    "items": 2
  },
  {
    "range": [
      140,
      146
    ],
    "items": 2
  },
  {
    "range": [
      161,
      168
    ],
    "items": 2
  },
  {
    "range": [
      171,
      178
    ],
    "items": 2
  },
  {
    "range": [
      206,
      210
    ],
    "items": 2
  }
]
