packages/engine/src/tests/snapshots/engine__tests__tooltip__clean_math_inline_tooltips.snap
---
source: packages/engine/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      7,
      24
    ],
    "items": 9
  },
  {
    "range": [
      40,
      70
    ],
    "items": 11
  }
]
